add prom webhook for discord

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -37,14 +37,15 @@ stringData:
   SECRET_MAILU_POSTMASTER_PASSWORD: ENC[AES256_GCM,data:HfTzfFeGXl9HGnSTS8FV,iv:0/5SX2aoeFy8LhxEn14mhzFmUbKe0rltkrKKddzEBHU=,tag:U/aWV9Qz7nWv+GwSda9THA==,type:str]
   SECRET_MAILU_SECRET_KEY: ENC[AES256_GCM,data:CcvLkAFHSeI=,iv:295/zU68dXx5eXX9Zo64OYzg2HQx2nOcvc3LkAHFDhs=,tag:0l9KBheYmbn8Q04CdJxipA==,type:str]
   SECRET_DEX_VULTR_CLIENT_SECRET: ENC[AES256_GCM,data:6Ps7r64zv/ltEYjRZcKGg+qHiVMPUOe1VGUg9ALZdytNQOp8eonHA5Nl,iv:ZWGEc+pBLbyMhBq7C+5c67j6G/CWVTtcL/FY5aoVyCE=,tag:PLPpvtwj3yIKn9IpFq1AZg==,type:str]
+  SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:Q3qgjLzuRTouFdJuEL87D+Ewi2WDdcbM6bf+mBOgL2UgoGzWE0FQSCrwCKjvfA4SebOQk0SLLTSKqkTFPe0pFqacfaFKDk+XZAs+X6VUPrWaUUmRH1TWKCHyHqEWWBCnkvY47l59E3n/OMPMG+/h0mm4oQlpnpd3,iv:D03oIVkN3q6xBP7uv53XWvfa7IHA++GYNQxCMtpNBzw=,tag:Y6nkcvPrTd7lVC9KImzCRQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-07-28T14:04:51Z"
-  mac: ENC[AES256_GCM,data:3rlYnICBXM9yB0ocEQDAidy4Q2/RZo37+fcXlo/EWgUo1KcZKvne5AW0MXlqHsno280ppKyjlW5YRtEWzptMtfn4QFPMDvPsZ0p62Lh3oeBSzuF80DwB91hz0pMBhKPPnC7TR+ND+upJ07wQosgNS5zIaQWttUHY65jlufZeQpo=,iv:r+l0+VXrVKaH8khthMS96E55mlTM6oNVD2M2CDyWyqc=,tag:tJ0w9hDLYyCsVjy615HH1w==,type:str]
+  lastmodified: "2021-07-28T14:36:24Z"
+  mac: ENC[AES256_GCM,data:KuzjmsG1vp7AJnCwb0r5o7py6DQXaBjhjWX+pGU8imQuATc5T8YKuSZ3IsH8V1dwGIBektkGgocNWCd8O3qomuyCMrtdFSZMCHsiCPLAnDRyM8rvzVK4tEepTrxDvTekGK4Raszx5vWMear/gwkbxNjEmk3Wm5fH9Ap7eIWb9fA=,iv:X6np+iemIH5YQzjEmJWfuW3D0hB2nGD8CmsEanLjFYA=,tag:i9V3S+5zNdGIildtYAsh9A==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
