--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -58,7 +58,7 @@ spec:
     objstore:
       type: S3
       config:
-        insecure: false
+        insecure: true
         signature_version2: false
         put_user_metadata: {}
         http_config:
