--- a/cluster/apps/kube-system/registry-creds/registry-creds.yaml
+++ b/cluster/apps/kube-system/registry-creds/registry-creds.yaml
@@ -7,12 +7,12 @@ metadata:
   name: clusterpullsecrets.ops.alexellis.io
 spec:
   additionalPrinterColumns:
-  - JSONPath: .spec.secretRef.name
-    name: SecretName
-    type: string
-  - JSONPath: .spec.secretRef.namespace
-    name: SecretNamespace
-    type: string
+    - JSONPath: .spec.secretRef.name
+      name: SecretName
+      type: string
+    - JSONPath: .spec.secretRef.namespace
+      name: SecretNamespace
+      type: string
   group: ops.alexellis.io
   names:
     kind: ClusterPullSecret
@@ -26,10 +26,10 @@ spec:
       description: ClusterPullSecret is the Schema for the clusterpullsecrets API
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+          description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources"
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+          description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"
           type: string
         metadata:
           type: object
@@ -45,9 +45,9 @@ spec:
       type: object
   version: v1
   versions:
-  - name: v1
-    served: true
-    storage: true
+    - name: v1
+      served: true
+      storage: true
 status:
   acceptedNames:
     kind: ""
@@ -61,32 +61,19 @@ metadata:
   name: registry-creds-leader-election-role
   namespace: kube-system
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - configmaps
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
-- apiGroups:
-  - ""
-  resources:
-  - configmaps/status
-  verbs:
-  - get
-  - update
-  - patch
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    resourceNames:
+      - 8bdecb1a.alexellis.io
+    verbs:
+      - get
+      - create
+      - update
+      - patch
+---
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -94,84 +81,41 @@ metadata:
   creationTimestamp: null
   name: registry-creds-registry-creds-role
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - namespaces
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - namespaces/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - ""
-  resources:
-  - secrets
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - secrets/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - ""
-  resources:
-  - serviceaccounts
-  verbs:
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - serviceaccounts/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - ops.alexellis.io
-  resources:
-  - clusterpullsecrets
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - ops.alexellis.io
-  resources:
-  - clusterpullsecrets/status
-  verbs:
-  - get
-  - patch
-  - update
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - create
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts
+    verbs:
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - ops.alexellis.io
+    resources:
+      - clusterpullsecrets
+    verbs:
+      - get
+      - list
+      - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -183,9 +127,9 @@ roleRef:
   kind: Role
   name: registry-creds-leader-election-role
 subjects:
-- kind: ServiceAccount
-  name: default
-  namespace: kube-system
+  - kind: ServiceAccount
+    name: default
+    namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -196,9 +140,9 @@ roleRef:
   kind: ClusterRole
   name: registry-creds-registry-creds-role
 subjects:
-- kind: ServiceAccount
-  name: default
-  namespace: kube-system
+  - kind: ServiceAccount
+    name: default
+    namespace: kube-system
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -218,20 +162,18 @@ spec:
         control-plane: registry-creds-controller
     spec:
       containers:
-      - args:
-        - --enable-leader-election
-        command:
-        - /controller
-        image: ghcr.io/alexellis/registry-creds:0.2.7
-        imagePullPolicy: IfNotPresent
-        name: controller
-        resources:
-          limits:
-            memory: 200Mi
-          requests:
-            cpu: 100m
-            memory: 45Mi
+        - args:
+            - --enable-leader-election
+          command:
+            - /controller
+          image: ghcr.io/alexellis/registry-creds:0.2.7
+          imagePullPolicy: IfNotPresent
+          name: controller
+          resources:
+            limits:
+              cpu: 100m
+              memory: 64Mi
+            requests:
+              cpu: 100m
+              memory: 45Mi
       terminationGracePeriodSeconds: 10
-      tolerations:
-      - key: arm
-        operator: Exists
