--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
         - secretName: home-assistant-cert
           hosts:
           - "ha.${SECRET_DOMAIN}"
-    hostNetwork: true
+    hostNetwork: false
     dnsPolicy: ClusterFirstWithHostNet
     probes:
       liveness:
