--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -191,10 +191,10 @@ spec:
               - targets:
                   - nas-0.${SECRET_DOMAIN}:19999
                   - nas-1.${SECRET_DOMAIN}:19999
-          - job_name: "node-exporter"
-            static_configs:
-              - targets:
-                  - fw.${SECRET_DOMAIN}:9100
+          # - job_name: "node-exporter"
+          #   static_configs:
+          #     - targets:
+          #         - fw.${SECRET_DOMAIN}:9100
           - job_name: "home-assistant"
             scrape_interval: 60s
             metrics_path: "/api/prometheus"
