--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - _pvc
-  - descheduler
+  # - descheduler
   - external-secrets
   - kube-cleanup-operator
   - metrics-server
