--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -12,7 +12,8 @@ data:
   SVC_TRAEFIK_ADDRESS: "10.45.20.10"
   SVC_VERNEMQ_ADDRESS: "10.45.10.11"
   SVC_GITEA_ADDRESS: "10.45.10.12"
-  SVC_ADGUARD_ADDRESS: "10.45.10.13"
+  #SVC_ADGUARD_ADDRESS: "10.45.10.13"
+  SVC_BLOCKY_ADDRESS: "10.45.10.13"
   SVC_INFLUXDB_ADDRESS: "10.45.10.15"
   SVC_LOKI_ADDRESS: "10.45.10.16"
   SVC_RESILIO_SYNC_ADDRESS: "10.45.10.18"
