--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -43,11 +43,11 @@ spec:
             port: 53
             protocol: TCP
             targetPort: 53
-          udp:
-            enabled: true
-            port: 53
-            protocol: UDP
-            targetPort: 53
+          # udp:
+          #   enabled: true
+          #   port: 53
+          #   protocol: UDP
+          #   targetPort: 53
         externalTrafficPolicy: Local
     config: |
       upstream:
