--- a/cluster/apps/network/blocky/helm-release.yaml
+++ b/cluster/apps/network/blocky/helm-release.yaml
@@ -32,7 +32,7 @@ spec:
         ports:
           http:
             port: 4000
-      dns:
+      dns-tcp:
         enabled: true
         type: LoadBalancer
         externalIPs:
@@ -43,11 +43,17 @@ spec:
             port: 53
             protocol: TCP
             targetPort: 53
-          # udp:
-          #   enabled: true
-          #   port: 53
-          #   protocol: UDP
-          #   targetPort: 53
+      dns-udp:
+        enabled: true
+        type: LoadBalancer
+        externalIPs:
+          - "${SVC_BLOCKY_ADDRESS}"
+        ports:
+          udp:
+            enabled: true
+            port: 53
+            protocol: UDP
+            targetPort: 53
         externalTrafficPolicy: Local
     config: |
       upstream:
