--- a/cluster/apps/kube-system/registry-creds/kustomization.yaml
+++ b/cluster/apps/kube-system/registry-creds/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- dockerhub-registrycreds.enc.yaml
+# - dockerhub-registrycreds.enc.yaml
+- docker_creds.enc.yaml
 - registry-creds.yaml
 - dockerhub.yaml
