--- a/cluster/apps/default/_pvc/kustomization.yaml
+++ b/cluster/apps/default/_pvc/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- nfs-backup-share.yaml
+# - nfs-backup-share.yaml
 - nfs-home-ryan.yaml
 - nfs-home-stefanie.yaml
 - nfs-pictures.yaml
