--- a/cluster/apps/collab/joplin/kustomization.yaml
+++ b/cluster/apps/collab/joplin/kustomization.yaml
@@ -2,6 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - gitea
-  - openkm
-  - joplin
+  - joplin-postgresql-secret.enc.yaml
+  - helm-release.yaml
