--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -38,14 +38,15 @@ stringData:
   SECRET_MAILU_SECRET_KEY: ENC[AES256_GCM,data:CcvLkAFHSeI=,iv:295/zU68dXx5eXX9Zo64OYzg2HQx2nOcvc3LkAHFDhs=,tag:0l9KBheYmbn8Q04CdJxipA==,type:str]
   SECRET_DEX_VULTR_CLIENT_SECRET: ENC[AES256_GCM,data:6Ps7r64zv/ltEYjRZcKGg+qHiVMPUOe1VGUg9ALZdytNQOp8eonHA5Nl,iv:ZWGEc+pBLbyMhBq7C+5c67j6G/CWVTtcL/FY5aoVyCE=,tag:PLPpvtwj3yIKn9IpFq1AZg==,type:str]
   SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:Qad8DU4CpSrbmBBGQKNB08d9U8YI39QVdSKsnXDB78N2ADC3/hHVal4m3hBgEzwpWJOjWCJKKaipgVRMa3bc/Cu2zRLL7Vp56mkcJLV8AUW2nweX3CUspkdaQ/jaShr9Em6GWwQZ978k7RzdQ/XOw16I4QmgJfgISLBqct/B,iv:4a6M3SFx57vMZHZv9bJME0FwDHHKoHiPBPegvmhOxMc=,tag:FZyyKZKKPMtcFc6iLBhnvw==,type:str]
+  SECRET_JOPLIN_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Wlj/mx6PNu1okFXfn/McAI4KMJ9f4wfH/5EQ+A==,iv:QA6QVc6YZV7QMQfiDX27vDc0dpG6sJT6z8xt90gjwIQ=,tag:jFeUH7DSjh9FZEdVa7Gktw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-02T20:56:19Z"
-  mac: ENC[AES256_GCM,data:+Vv+Hnl2hlOZyw1zg59vLrShSAKI/4ZCz4uqSyHWEAO6ylkmpEMRQFauoM24hBC4KuB2rFSaXB1pU3XRJNtX2RGwjTAyprvivC+tD6AozvpXQksgTwOeNvVRT7oSbTcs+quUyZdUQ85zh/IAny0+l6ZHrZl/FdW3QBUMTF4z54w=,iv:xgalkmox8qbYNnb9GoMNS+WP3G22kDyzv7UBO+R7Zps=,tag:w0akUExVyi6G9O4OnprEkA==,type:str]
+  lastmodified: "2021-08-03T16:57:47Z"
+  mac: ENC[AES256_GCM,data:M35IxPyadpjSuNd++xNR/Gn0h88W+CwDZtQEyI3QJgxwWE50NYjHfXuqIJefQGV1FNZfR8xDdQDYIKRoEtF7O0+9KGq5r3E2kNry1I/B65HP6qRu0zW3opbk3vm34T4QG/9KN0lpl2x3nQYZDaFQAHQXyjFAjmxFN+zTF4w3ai8=,iv:OXSr5WeeJdmylLY58H0q8bKTjbbBxm+mhTObhK+5crA=,tag:utHDdBZWzfLNB3oadNSIkQ==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
