--- a/cluster/apps/collab/joplin/helm-release.yaml
+++ b/cluster/apps/collab/joplin/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: joplin-server
+  name: joplin
   namespace: collab
 spec:
   interval: 5m
