change postgresql host def

--- a/cluster/apps/collab/joplin/helm-release.yaml
+++ b/cluster/apps/collab/joplin/helm-release.yaml
@@ -39,7 +39,7 @@ spec:
       APP_BASE_URL: https://joplin.${SECRET_DOMAIN}
       APP_PORT: 22300
       DB_CLIENT: pg
-      POSTGRES_HOST: postgresql-kube.data.svc.cluster.local.
+      POSTGRES_HOST: joplin-postgresql.collab.svc.cluster.local.
       POSTGRES_PORT: 5432
       POSTGRES_DATABASE: joplin
       POSTGRES_USER: joplin
