define username and db name for postgres db

--- a/cluster/apps/collab/joplin/helm-release.yaml
+++ b/cluster/apps/collab/joplin/helm-release.yaml
@@ -67,6 +67,8 @@ spec:
 
     postgresql:
       existingSecret: joplin-postgresql-secret
+      postgresqlUsername: joplin
+      postgresqlDatabase: joplin
       enabled: true
       persistence:
         enabled: true
