add admin password to secrets

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -39,14 +39,15 @@ stringData:
   SECRET_DEX_VULTR_CLIENT_SECRET: ENC[AES256_GCM,data:6Ps7r64zv/ltEYjRZcKGg+qHiVMPUOe1VGUg9ALZdytNQOp8eonHA5Nl,iv:ZWGEc+pBLbyMhBq7C+5c67j6G/CWVTtcL/FY5aoVyCE=,tag:PLPpvtwj3yIKn9IpFq1AZg==,type:str]
   SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:Qad8DU4CpSrbmBBGQKNB08d9U8YI39QVdSKsnXDB78N2ADC3/hHVal4m3hBgEzwpWJOjWCJKKaipgVRMa3bc/Cu2zRLL7Vp56mkcJLV8AUW2nweX3CUspkdaQ/jaShr9Em6GWwQZ978k7RzdQ/XOw16I4QmgJfgISLBqct/B,iv:4a6M3SFx57vMZHZv9bJME0FwDHHKoHiPBPegvmhOxMc=,tag:FZyyKZKKPMtcFc6iLBhnvw==,type:str]
   SECRET_JOPLIN_POSTGRES_PASSWORD: ENC[AES256_GCM,data:JjsownH2fg9ooNx0nt4uUkTQnC8SWj8X5gWb7g==,iv:3YP8m/2oI0XbLalxEhHkU3MZivMhqVGGn8oTZeOoxpU=,tag:MhChRkokrNW97srcj/9amA==,type:str]
+  SECRET_JOPLIN_POSTGRES_ADMIN_PASSWORD: ENC[AES256_GCM,data:AVDVQCoVihxpurMiXYuX4+jDfyjvQf1+JIA34g==,iv:2obZ867QMuLHbWCgPIT8B6jOAeuJhoEIkNa81Q1aPmw=,tag:BXr8aiDz027+4mQaxdlafg==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-03T17:14:45Z"
-  mac: ENC[AES256_GCM,data:888StdMOdpbgjxdfx0nTLKPFuslQ7r6+/cXco27YRHhfybfQDpQvGRRaRrqH9N5a+cGyQaUC2WTqTftN7Di3mzwRzEBC6f9un9a4cyjR/ALE9cMAFc+LhZy1mVVHe1mYyL/dEeC0/BdUFbPHcq+cjqAVYtcjGru2NIaX/Nqf/78=,iv:zomejQrDx4x9gLD1SOYHEn2L9+qAQy5nZ2u6dZKAwRM=,tag:uw3JlZcDgP+FMcrmwP/9nQ==,type:str]
+  lastmodified: "2021-08-03T17:21:53Z"
+  mac: ENC[AES256_GCM,data:nX5bSPGy3dUym61MzUF9q18ssdgUIjpUItIgZwYjByXyYnqlGK1Uu9y/iqCt1JkIV75dRtXhLn2qCwr6ugSQyQ+Q9ljzjeXlmDkMWyzqaxpKM5/a8hn4amE5v74JiK8M0yfMwYjwyN2ZJL4fylsnNwjV5mMLhz2k2TVCP7Q4CYA=,iv:V519tZZN36jP1miJxRdeVDa4W7rCzhG1NcH0Jz47gJ0=,tag:7+OqPMnrcvmx7t5fEGKUMA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
