add outbound mailgun secret to joplin

--- a/cluster/apps/collab/joplin/helm-release.yaml
+++ b/cluster/apps/collab/joplin/helm-release.yaml
@@ -45,6 +45,14 @@ spec:
       POSTGRES_DATABASE: joplin
       POSTGRES_USER: joplin
       POSTGRES_PASSWORD: ${SECRET_JOPLIN_POSTGRES_PASSWORD}
+      MAILER_ENABLED: 1
+      MAILER_HOST: smtp.mailgun.org
+      MAILER_PORT: 587
+      MAILER_SECURE: 1
+      MAILER_AUTH_USER: ${SECRET_MAILGUN_USERNAME}
+      MAILER_AUTH_PASSWORD: ${SECRET_MAILGUN_PASSWORD}
+      MAILER_NOREPLY_NAME: NoReply
+      MAILER_NOREPLY_EMAIL: noreply@${SECRET_DOMAIN}
 
     ingress:
       main:
