change from email name

--- a/cluster/apps/collab/joplin/helm-release.yaml
+++ b/cluster/apps/collab/joplin/helm-release.yaml
@@ -51,7 +51,7 @@ spec:
       MAILER_SECURE: 1
       MAILER_AUTH_USER: ${SECRET_MAILGUN_USERNAME}
       MAILER_AUTH_PASSWORD: ${SECRET_MAILGUN_PASSWORD}
-      MAILER_NOREPLY_NAME: NoReply
+      MAILER_NOREPLY_NAME: Joplin
       MAILER_NOREPLY_EMAIL: noreply@${SECRET_DOMAIN}
 
     ingress:
