--- a/cluster/apps/collab/kustomization.yaml
+++ b/cluster/apps/collab/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - forecastle
+  # - forecastle
   - gitea
   - openkm
   - joplin
