--- a/cluster/apps/collab/vikunja/kustomization.yaml
+++ b/cluster/apps/collab/vikunja/kustomization.yaml
@@ -2,8 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - forecastle
-  - gitea
-  - openkm
-  - joplin
-  - vikunja
+  - helm-release.yaml
