cluster secrets needed for vikunja

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -40,14 +40,17 @@ stringData:
   SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:Qad8DU4CpSrbmBBGQKNB08d9U8YI39QVdSKsnXDB78N2ADC3/hHVal4m3hBgEzwpWJOjWCJKKaipgVRMa3bc/Cu2zRLL7Vp56mkcJLV8AUW2nweX3CUspkdaQ/jaShr9Em6GWwQZ978k7RzdQ/XOw16I4QmgJfgISLBqct/B,iv:4a6M3SFx57vMZHZv9bJME0FwDHHKoHiPBPegvmhOxMc=,tag:FZyyKZKKPMtcFc6iLBhnvw==,type:str]
   SECRET_JOPLIN_POSTGRES_PASSWORD: ENC[AES256_GCM,data:JjsownH2fg9ooNx0nt4uUkTQnC8SWj8X5gWb7g==,iv:3YP8m/2oI0XbLalxEhHkU3MZivMhqVGGn8oTZeOoxpU=,tag:MhChRkokrNW97srcj/9amA==,type:str]
   SECRET_JOPLIN_POSTGRES_ADMIN_PASSWORD: ENC[AES256_GCM,data:AVDVQCoVihxpurMiXYuX4+jDfyjvQf1+JIA34g==,iv:2obZ867QMuLHbWCgPIT8B6jOAeuJhoEIkNa81Q1aPmw=,tag:BXr8aiDz027+4mQaxdlafg==,type:str]
+  SECRET_VIKUNJA_POSTGRES_PASSWORD: ENC[AES256_GCM,data:X5h/YQODRJhUQzo090/64Mqa+GcAC34RCe49lw==,iv:KYgr9QSWOjMg6cFG/+cXc2bDxv3cWvqCNcuxBA5ce7M=,tag:6icgKioYDBWWYucOw3/t9w==,type:str]
+  SECRET_VIKUNJA_POSTGRES_ADMIN_PASSWORD: ENC[AES256_GCM,data:dc6ZyNfeccQl3iA66UXBU3XLENqDpiRQTu+Odg==,iv:eJnHR7v+EV9fWPBgaBH7xNI7p++rWpgPNN5U7IJI1jw=,tag:h6pDnFPFiHMSe0T9A+E60A==,type:str]
+  #ENC[AES256_GCM,data:adas0ovUycPO81cSk7DVtJH9dxW26sHtEpQ=,iv:MyXGjFg2xHWa8g4vlKpUjbNlkGIzLR0q4Ks4OYwSw/c=,tag:yNBsFmJ5uig8KQB/Ucw61Q==,type:comment]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-03T17:21:53Z"
-  mac: ENC[AES256_GCM,data:nX5bSPGy3dUym61MzUF9q18ssdgUIjpUItIgZwYjByXyYnqlGK1Uu9y/iqCt1JkIV75dRtXhLn2qCwr6ugSQyQ+Q9ljzjeXlmDkMWyzqaxpKM5/a8hn4amE5v74JiK8M0yfMwYjwyN2ZJL4fylsnNwjV5mMLhz2k2TVCP7Q4CYA=,iv:V519tZZN36jP1miJxRdeVDa4W7rCzhG1NcH0Jz47gJ0=,tag:7+OqPMnrcvmx7t5fEGKUMA==,type:str]
+  lastmodified: "2021-08-03T18:59:56Z"
+  mac: ENC[AES256_GCM,data:IX+jKlhq+uFQkVPtk8I5aP3qyDm5LSJRB/ofapS7547NA1ryQI2Ti3J8fWfh0OCuD2rbLHQfaA+LRkG0lCLSF/zPVLBmA9SBFnSs95PKeABMf9oMvIReWEd3VolN8ZOUpAD+umsUB0i4ROc8Px3QC7BNsiczXE8+xFPo9S6JK2I=,iv:+8DIY8DBAbSHTJfRCtoQTHpQ/jhJHqLpwviIaq60EKE=,tag:WUrG32e9i/s9XL76YRW55g==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
