--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -42,15 +42,15 @@ stringData:
   SECRET_JOPLIN_POSTGRES_ADMIN_PASSWORD: ENC[AES256_GCM,data:AVDVQCoVihxpurMiXYuX4+jDfyjvQf1+JIA34g==,iv:2obZ867QMuLHbWCgPIT8B6jOAeuJhoEIkNa81Q1aPmw=,tag:BXr8aiDz027+4mQaxdlafg==,type:str]
   SECRET_VIKUNJA_POSTGRES_PASSWORD: ENC[AES256_GCM,data:X5h/YQODRJhUQzo090/64Mqa+GcAC34RCe49lw==,iv:KYgr9QSWOjMg6cFG/+cXc2bDxv3cWvqCNcuxBA5ce7M=,tag:6icgKioYDBWWYucOw3/t9w==,type:str]
   SECRET_VIKUNJA_POSTGRES_ADMIN_PASSWORD: ENC[AES256_GCM,data:dc6ZyNfeccQl3iA66UXBU3XLENqDpiRQTu+Odg==,iv:eJnHR7v+EV9fWPBgaBH7xNI7p++rWpgPNN5U7IJI1jw=,tag:h6pDnFPFiHMSe0T9A+E60A==,type:str]
-  #ENC[AES256_GCM,data:adas0ovUycPO81cSk7DVtJH9dxW26sHtEpQ=,iv:MyXGjFg2xHWa8g4vlKpUjbNlkGIzLR0q4Ks4OYwSw/c=,tag:yNBsFmJ5uig8KQB/Ucw61Q==,type:comment]
+  SECRET_VIKUNJA_JWT_SECRET: ENC[AES256_GCM,data:QUUueK5qwpB0vU1/jmi7bYREnCSJm+feix6JkMP/vsk=,iv:dEonHEaJJna10F/A7wNDYhfISi09hbge7LU6aalPPMQ=,tag:ImFo0dM3lWpvpN5tRDhn+Q==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-03T18:59:56Z"
-  mac: ENC[AES256_GCM,data:IX+jKlhq+uFQkVPtk8I5aP3qyDm5LSJRB/ofapS7547NA1ryQI2Ti3J8fWfh0OCuD2rbLHQfaA+LRkG0lCLSF/zPVLBmA9SBFnSs95PKeABMf9oMvIReWEd3VolN8ZOUpAD+umsUB0i4ROc8Px3QC7BNsiczXE8+xFPo9S6JK2I=,iv:+8DIY8DBAbSHTJfRCtoQTHpQ/jhJHqLpwviIaq60EKE=,tag:WUrG32e9i/s9XL76YRW55g==,type:str]
+  lastmodified: "2021-08-03T19:31:18Z"
+  mac: ENC[AES256_GCM,data:mBQORGrpO8L5+drnQR+Mn2VxQ2ODoLQluIswR3ceF6noP9pmY2numwHZb6wlKbmAgjzjgEZbK5tBbMlpyVkD1+sOLWYFkzrjwddcxKu1zox9nJ4vFSkdvWThVvN4rb6pR9GA7VDFoFewr5D2TaivgEKzlVTVP3zBMeAnvYXpClk=,iv:6yOcMimqg7Pwnz/5cipaFHQ/fCeKA7XXuYeVsIcQPLI=,tag:lk83JlASBtkI8n6gDo1ctA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
