initial add for ext-gateway

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -43,14 +43,15 @@ stringData:
   SECRET_VIKUNJA_POSTGRES_PASSWORD: ENC[AES256_GCM,data:X5h/YQODRJhUQzo090/64Mqa+GcAC34RCe49lw==,iv:KYgr9QSWOjMg6cFG/+cXc2bDxv3cWvqCNcuxBA5ce7M=,tag:6icgKioYDBWWYucOw3/t9w==,type:str]
   SECRET_VIKUNJA_POSTGRES_ADMIN_PASSWORD: ENC[AES256_GCM,data:dc6ZyNfeccQl3iA66UXBU3XLENqDpiRQTu+Odg==,iv:eJnHR7v+EV9fWPBgaBH7xNI7p++rWpgPNN5U7IJI1jw=,tag:h6pDnFPFiHMSe0T9A+E60A==,type:str]
   SECRET_VIKUNJA_JWT_SECRET: ENC[AES256_GCM,data:QUUueK5qwpB0vU1/jmi7bYREnCSJm+feix6JkMP/vsk=,iv:dEonHEaJJna10F/A7wNDYhfISi09hbge7LU6aalPPMQ=,tag:ImFo0dM3lWpvpN5tRDhn+Q==,type:str]
+  SECRET_EXT_GATEWAY_IP: ENC[AES256_GCM,data:Oi2rfPIl03jo3KDokX0=,iv:uWrxbtLgzY8lzuIJdPen71s61tdzDATIdECfJ4o+2y8=,tag:d2x2Nc783pfKhW0wn4VG/g==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-08-03T19:31:18Z"
-  mac: ENC[AES256_GCM,data:mBQORGrpO8L5+drnQR+Mn2VxQ2ODoLQluIswR3ceF6noP9pmY2numwHZb6wlKbmAgjzjgEZbK5tBbMlpyVkD1+sOLWYFkzrjwddcxKu1zox9nJ4vFSkdvWThVvN4rb6pR9GA7VDFoFewr5D2TaivgEKzlVTVP3zBMeAnvYXpClk=,iv:6yOcMimqg7Pwnz/5cipaFHQ/fCeKA7XXuYeVsIcQPLI=,tag:lk83JlASBtkI8n6gDo1ctA==,type:str]
+  lastmodified: "2021-08-03T20:34:06Z"
+  mac: ENC[AES256_GCM,data:JXAKlJH45H9C5Sp9ptpo0dBUkZWGEM3B7EYT/ufXvGkAz452joGR5+Hpxvt+xg8wHSNsE+YWyxAbbgqmsPD0YS8RjWsak0wIH93ZRzP3UIDNtYYBuy/DwEGf6U5ZsuLArru+AlCBrazEg3PRmte9jM513zb7KaVwnohh8Qj0a7M=,iv:8AvObuIc5u9mkQca1Z5UcJ8REXps0RRB/ZTWkW1jCb8=,tag:f8mCikBXhP6jUarX8bKkKg==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
