--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -24,3 +24,4 @@ data:
   NETWORK_K8S_CLUSTER_CIDR: "10.42.0.0/16"
   NETWORK_K8S_SERVICE_CIDR: "10.43.0.0/16"
   NETWORK_MANAGEMENT_CIDR: "10.20.0.0/16"
+  VPN_PORT: "51820"
