--- a/cluster/apps/collab/gitea/helm-release.yaml
+++ b/cluster/apps/collab/gitea/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
     ingress:
       enabled: true
       annotations:
-        kubernetes.io/ingress.class: "nginx"
+        kubernetes.io/ingress.class: "traefik"
         nginx.ingress.kubernetes.io/proxy-body-size: 128m
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: "letsencrypt-production"
