--- a/cluster/apps/default/monica/helm-release.yaml
+++ b/cluster/apps/default/monica/helm-release.yaml
@@ -33,8 +33,8 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: traefik
         annotations:
-          kubernetes.io/ingress.class: "nginx"
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: "letsencrypt-production"
         hosts:
