--- a/cluster/apps/kasten-io/k10/helm-release.yaml
+++ b/cluster/apps/kasten-io/k10/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
       - "k10.${SECRET_DOMAIN}"
       tls:
         enabled: true
-        secretName: k10-cert
+        # secretName: k10-cert
   #   resources:
   #     requests:
   #       memory: 250Mi
