add hostname callout for qb

--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
       tag: v4.3.7
     podAnnotations:
       setGateway: "true"
+    hostname: qbittorrent
     env:
       TZ: "America/New_York"
     service:
