--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -74,11 +74,11 @@ spec:
         cpu: 500m
       limits:
         memory: 6000Mi
-    prometheus:
-      podMonitor:
-        enabled: true
-        interval: 10m
-        scrapeTimeout: 2m
+    # prometheus:
+    #   podMonitor:
+    #     enabled: true
+    #     interval: 10m
+    #     scrapeTimeout: 2m
     additionalContainers:
       - name: exporter
         image: esanchezm/prometheus-qbittorrent-exporter:latest
