--- a/cluster/apps/media/radarr/helm-release.yaml
+++ b/cluster/apps/media/radarr/helm-release.yaml
@@ -34,28 +34,28 @@ spec:
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
-        - host: "radarr.${SECRET_DOMAIN}"
-          paths:
-          - path: /
-            pathType: Prefix
+          - host: "radarr.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
-        - hosts:
-          - "radarr.${SECRET_DOMAIN}"
-          secretName: radarr-cert
+          - hosts:
+              - "radarr.${SECRET_DOMAIN}"
+            secretName: radarr-cert
       api:
         enabled: true
         ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
-        - host: "radarr.${SECRET_DOMAIN}"
-          paths:
-          - path: /api
-            pathType: Prefix
+          - host: "radarr.${SECRET_DOMAIN}"
+            paths:
+              - path: /api
+                pathType: Prefix
         tls:
-        - hosts:
-          - "radarr.${SECRET_DOMAIN}"
-          secretName: radarr-cert
+          - hosts:
+              - "radarr.${SECRET_DOMAIN}"
+            secretName: radarr-cert
     persistence:
       config:
         enabled: true
@@ -70,3 +70,31 @@ spec:
         cpu: 500m
       limits:
         memory: 1500Mi
+    prometheus:
+      podMonitor:
+        enabled: true
+        interval: 10m
+        scrapeTimeout: 2s
+    additionalContainers:
+      - name: exportarr
+        image: ghcr.io/onedr0p/exportarr:v0.6.1
+        imagePullPolicy: IfNotPresent
+        args: ["exportarr", "radarr"]
+        env:
+          - name: PORT
+            value: "32123"
+          - name: URL
+            value: "http://localhost"
+          - name: CONFIG
+            value: "/config/config.xml"
+          - name: ENABLE_UNKNOWN_QUEUE_ITEMS
+            value: "true"
+          - name: ENABLE_ADDITIONAL_METRICS
+            value: "true"
+        ports:
+          - name: exportarr
+            containerPort: 32123
+        volumeMounts:
+          - name: config
+            mountPath: /config
+            readOnly: true
